edit/add app, error messages
